# intent-demo

./: .gitignore  BROWSER_CSV_FLOW.md  BROWSER_DEMOS.md  Cargo.toml  QUICK_START.md  REFACTORING_SUMMARY.md  UPDATE_SUMMARY.md  build.rs  decode-tx.sh  run-example.sh  serve.sh
.cargo/: config.toml
examples/: browser.html  browser_backend_demo.html  browser_csv_demo.html  browser_demo.html  csv_refund_demo.rs  decode_tx.rs  full_musig2_signing.rs  generate_address.rs  get_full_tx.rs  test_signing.rs  test_taproot_signing.rs
src/: crypto.rs  demo.rs  lib.rs  musig.rs  musig2_wasm.rs  refund_leaf.rs  sighash.rs  solver_stub.rs  tx.rs  tx_build.rs  types.rs  wasm_bindings.rs
