[package]
name = "wasm-helper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "solver"
path = "src/bin/solver_backend.rs"
required-features = ["backend"]

[dependencies]
# MuSig2-enabled secp256k1 with WASM support (from git until musig is in stable release)
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", features = [
    "global-context",
    "rand",
    "serde"
] }
bitcoin = { version = "0.32.7", features = ["serde", "base64"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
async-trait = "0.1"
lazy_static = "1.4"

# Backend dependencies
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
rand = { version = "0.8", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
default = ["console_error_panic_hook"]
demo = []
backend = ["axum", "tokio", "tower-http", "rand"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }


[profile.release]
opt-level = "s"
lto = true

